--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
         </form>
     </div>
-    <script src="js/vue.js"></script>
+    <script src="js/vue.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
