--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://dewofyouryouth.github.io/doyy.png"
+    />
     <title>
         Vue Todo List w/ localStorage
     </title>
